--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 	<head>
 	</head>
 	<body>
-		<h1>Hello world</h1>
-		<p>Githib test</p>
+		<h1>THIS IS THE HARAMBE</h1>
+		<div>
+			<p>Reddit Feed</p>
+		</div>
+		<div>
+			<p>League Matchups</p>
+		</div>
+		<div>
+			<p>Message Board</p>
+		</div>		
 	</body>
 </html>
