--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	The Harambe
 	</head>
 	<body>
 		<h1>THIS IS THE HARAMBE</h1>
-		<div>
+		<div id="left">
 			<p>Reddit Feed</p>
 		</div>
-		<div>
+		<div id="center">
 			<p>League Matchups</p>
 		</div>
-		<div>
+		<div id="right">
 			<p>Message Board</p>
 		</div>		
 	</body>
