--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<h1>THIS IS THE HARAMBE</h1>
 		<div id="left">
 			<p>Reddit Feed</p>
-			<p><iframe src="http://reddit-stream.com/comments/55qtuw/"></iframe></p>
+			<p><iframe id="feed" src="http://reddit-stream.com/comments/55qtuw/"></iframe></p>
 		</div>
 		<div id="center">
 			<p>League Matchups</p>
