--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
-<!DOCTYPE html>
-<html>
-	<head>
-	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-	</head>
-	<body>
-		<h1>THIS IS THE HARAMBE</h1>
-		<div id="left">
-			<p>Reddit Feed</p>
-			<p><iframe id="feed" src="http://reddit-stream.com/comments/55qtuw/"></iframe></p>
-		</div>
-		<div id="center">
-			<p>League Matchups</p>
-		</div>
-		<div id="right">
-			<p>Message Board</p>
-		</div>		
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>The Harambe</title>
+<link type="text/css" rel="stylesheet" href="style.css" />
+</head>
+ 
+<h1>THIS IS THE HARAMBE</h1>
+<div id="left">
+	<h1>Reddit Feed</h1>
+	<iframe id="feed" src="http://reddit-stream.com/comments/55qtuw/"></iframe>
+</div>
+<div id="center">
+	<p>Something</p>
+</div>
+ 
+<div id="wrapper">
+    <div id="menu">
+        <p class="welcome">Welcome, <b></b></p>
+        <p class="logout"><a id="exit" href="#">Exit Chat</a></p>
+        <div style="clear:both"></div>
+    </div>
+     
+    <div id="chatbox"></div>
+     
+    <form name="message" action="">
+        <input name="usermsg" type="text" id="usermsg" size="63" />
+        <input name="submitmsg" type="submit"  id="submitmsg" value="Send" />
+    </form>
+</div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script type="text/javascript">
+// jQuery Document
+$(document).ready(function(){
+ 
+});
+</script>
+</body>
 </html>
