--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <title>The Harambe</title>
 <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
- 
-<h1>THIS IS THE HARAMBE</h1>
+
+<body>
+<h1>harambe.com</h1>
 <div id="left">
 	<h1>Reddit Feed</h1>
 	<iframe id="feed" src="http://reddit-stream.com/comments/55qtuw/"></iframe>
