--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<iframe id="feed" src="http://reddit-stream.com/comments/55qtuw/"></iframe>
 </div>
 <div id="center">
-	<p>Something</p>
+	<p>Something like league stats and other data once the API key gets here</p>
 </div>
  
 <div id="wrapper">
